main add full login panel func

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -423,7 +423,6 @@
                 </div>
               </div>
             </div>
-            <input id="access_token" type="hidden" name="access_token" value="<?php echo $_SESSION['access_token']; ?>" />
         </form>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -440,6 +439,20 @@
         });
         </script>
         <script>
+            var input_password = document.getElementById("modalLogin_password");
+            var input_login = document.getElementById("modalLogin_login")
+            input_password.addEventListener("keyup", function(event) {
+              if (event.keyCode === 13) {
+                event.preventDefault();
+                document.getElementById("modal_login_save").click();
+              }
+            });
+            input_login.addEventListener("keyup", function(event) {
+              if (event.keyCode === 13) {
+                event.preventDefault();
+                document.getElementById("modal_login_save").click();
+              }
+            });
 
 
         $('#release_date').datepicker({
@@ -1089,7 +1102,7 @@
                     }
                 }
             });
-        }
+        };
         function modal_m29_get_data() {
             document.getElementById('m29_tbl_body').innerHTML = ""
             $.ajax({
@@ -1132,10 +1145,61 @@
                     }
                 }
             });
-        }
+        };
         function check_login() {
-            document.getElementById('modalLogin_login_error').hidden = false
-            document.getElementById('modalLogin_password_error').hidden = false
+            console.log('check login')
+            {#document.getElementById('modalLogin_login_error').hidden = false#}
+            {#document.getElementById('modalLogin_password_error').hidden = false#}
+            let login_data = $('#modalLogin_login').val()
+            let password_data = $('#modalLogin_password').val()
+            let check_login_empty = false
+            let check_password_empty = false
+            console.log(login_data)
+            console.log(login_data.length)
+            console.log(password_data)
+            console.log(password_data.length)
+            if (login_data.length == 0) {
+                document.getElementById('modalLogin_login_error').innerHTML = 'введите логин'
+                document.getElementById('modalLogin_login_error').hidden = false
+                check_login_empty = true
+            }
+            if (password_data.length == 0) {
+                document.getElementById('modalLogin_password_error').innerHTML = 'введите логин'
+                document.getElementById('modalLogin_password_error').hidden = false
+                check_password_empty = true
+            }
+            if ((check_login_empty == false) && (check_password_empty == false)) {
+                 $.ajax({
+                    type: "GET",
+                    url: "/",
+                    dataType: "json",
+                    data: {
+                    name: 'check_login',
+                        login: login_data,
+                        password: password_data,
+                    },
+                    success: function(resp) {
+                        if (resp.result == 'success') {
+                            document.getElementById('modal_login_cancel').click()
+                        }
+                        else {
+                            document.getElementById('modalLogin_password_error').innerHTML = 'неверный логин или пароль'
+                            document.getElementById('modalLogin_password_error').hidden = false
+                        }
+                    },
+                    error: function(result) {
+                        var readyState = {
+                        1: "Loading",
+                        2: "Loaded",
+                        3: "Interactive",
+                        4: "Complete"
+                        };
+                        if(result.readyState !== 0 && result.status !== 0 && result.responseText !== undefined) {
+                            alert("readyState: " + readyState[result.readyState] + "\n status: " + result.status + "\n\n responseText: " + result.responseText);
+                        }
+                    }
+                });
+            }
         }
         </script>
 
