--- a/blog/templates/blog/statistic.html
+++ b/blog/templates/blog/statistic.html
@@ -55,6 +55,7 @@
     });
     </script>
     <script>
+        window.localStorage.setItem('islogined', 'true');
         var release_table_height = 0
         var release_table_width = 0
         var release_color_array = []
