--- a/blog/templates/blog/statistic.html
+++ b/blog/templates/blog/statistic.html
@@ -11,7 +11,7 @@
 <body>
     <div id="picoutput"></div>
     <div class="page-header">
-        <h1><a href="/" class="head_title">С-ПЛАСТ | <span style="height: 20px; vertical-align: top; ">статистика</span> </a></h1>
+        <h1><img src="{% static '/image/sinaps_.png' %}" class="image" alt="" style="height: 45px; margin-bottom: 5px"><a href="/" class="head_title" style="margin-left: 10px">С-ПЛАСТ | <span style="height: 20px; vertical-align: top; ">статистика</span> </a></h1>
     </div>
     <div class="content-box" style=" text-align: center">
         <a style="font-size: 25px; font-family: Calibri; font-weight: normal">Производство</a>
