--- a/blog/templates/blog/structure.html
+++ b/blog/templates/blog/structure.html
@@ -12,7 +12,7 @@
         <div class="background-container">
             <div id="picoutput"></div>
             <div class="page-header">
-                <h1><a href="/" class="head_title">С-ПЛАСТ | <span style="height: 20px; vertical-align: top; ">управление заявками</span> </a></h1>
+                <h1><img src="{% static '/image/sinaps_.png' %}" class="image" alt="" style="height: 45px; margin-bottom: 5px"><a href="/" class="head_title" style="margin-left: 10px">С-ПЛАСТ | <span style="height: 20px; vertical-align: top; ">управление заявками</span> </a></h1>
             </div>
             <div class="row" style="width: 100%">
                 <div class="column" style="border-right: 2px solid #eeeeee; width: 12%; height: 1000px; margin-left: 50px;">
